# macy

./: Cargo.toml  README.md  build.rs  demo.tape
src/: app.rs  main.rs  metrics.rs  soc.rs
src/sources/: cf_utils.rs  cpu.rs  iokit.rs  ioreport.rs  memory.rs  mod.rs
src/widgets/: cpu_panel.rs  gpu_panel.rs  header.rs  mem_panel.rs  mod.rs  power_bar.rs
